// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<LazyLoadImg/> check LazyLoadImage plugin 1`] = `
<t
  afterLoad={[Function]}
  alt="Product 1"
  beforeLoad={[Function]}
  delayMethod="throttle"
  delayTime={300}
  effect=""
  placeholderSrc={null}
  threshold={100}
  useIntersectionObserver={true}
  visibleByDefault={false}
  wrapperClassName=""
/>
`;

exports[`<LazyLoadImg/> should render the component 1`] = `
<Fragment>
  <t
    afterLoad={[Function]}
    beforeLoad={[Function]}
    delayMethod="throttle"
    delayTime={300}
    effect=""
    placeholderSrc={null}
    threshold={100}
    useIntersectionObserver={true}
    visibleByDefault={false}
    wrapperClassName=""
  />
</Fragment>
`;

exports[`<LazyLoadImg/> should render with alt config option 1`] = `
<t
  afterLoad={[Function]}
  alt="Product 1"
  beforeLoad={[Function]}
  delayMethod="throttle"
  delayTime={300}
  effect=""
  placeholderSrc={null}
  threshold={100}
  useIntersectionObserver={true}
  visibleByDefault={false}
  wrapperClassName=""
/>
`;
